--- a/public/index.css
+++ b/public/index.css
@@ -17,7 +17,12 @@ body{
 
 /* Navigation Section */
 
-
+.container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
 .navigation{
     height: 90px;
     width: 100%;
@@ -25,6 +30,7 @@ body{
     display: flex;
     justify-content:space-between;
     position: relative;
+    transition: 0.2s;
 }
 .navigation .navbar_link{
     display: flex;
@@ -220,3 +226,9 @@ body{
     width: 100%;
     line-height: 1.5;
 }
+
+.floatingNav {
+    position: fixed;
+    z-index: 100000;
+  }
+  
