--- a/public/index.css
+++ b/public/index.css
@@ -119,7 +119,10 @@ body{
 .navigation .navbar_link  .hover-3:hover:before {
     transform: translateX(0);
 }
-
+.navigation .navbar_link .active > .navigation .navbar_link .hover-3:before{
+    transform: translateX(0%);
+    
+}
 
 /* name section */
 
