--- a/public/index.css
+++ b/public/index.css
@@ -1,16 +1,18 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: rgb(0, 0, 0);
     color: white;
-
+    transition: 0.2s;
 }
-html{
+
+html {
     position: relative;
     min-height: 100%;
 }
-body{
+
+body {
     font-family: 'Noto Sans', sans-serif;
 }
 
@@ -18,65 +20,117 @@ body{
 /* loader */
 
 #loading {
-    width:50px;
-    height:50px;
-    display:inline-block;
-    padding:0px;
-    opacity:0.5;
-    border:3px solid #09acfd;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    padding: 0px;
+    opacity: 0.5;
+    border: 3px solid #09acfd;
     -webkit-animation: loader 1s ease-in-out infinite alternate;
     animation: loader 1s ease-in-out infinite alternate;
- }
- 
- #loading:before {
-   content: " ";
-   position: absolute;
-   z-index: -1;
-   top: 5px;
-   left: 5px;
-   right: 5px;
-   bottom: 5px;
-   border: 3px solid #09acfd;
- }
- 
- #loading:after {
-   content: " ";
-   position: absolute;
-   z-index: -1;
-   top: 15px;
-   left: 15px;
-   right: 15px;
-   bottom: 15px;
-   border: 3px solid #09acfd;
- }
- 
- @keyframes loader {
-    from {transform: rotate(0deg) scale(1,1);border-radius:0px;}
-    to {transform: rotate(360deg) scale(0, 0);border-radius:50px;}
- }
- @-webkit-keyframes loader {
-    from {-webkit-transform: rotate(0deg) scale(1, 1);border-radius:0px;}
-    to {-webkit-transform: rotate(360deg) scale(0,0 );border-radius:50px;}
- }
+}
+
+#loading:before {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border: 3px solid #09acfd;
+}
+
+#loading:after {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border: 3px solid #09acfd;
+}
+
+@keyframes loader {
+    from {
+        transform: rotate(0deg) scale(1, 1);
+        border-radius: 0px;
+    }
+
+    to {
+        transform: rotate(360deg) scale(0, 0);
+        border-radius: 50px;
+    }
+}
+
+@-webkit-keyframes loader {
+    from {
+        -webkit-transform: rotate(0deg) scale(1, 1);
+        border-radius: 0px;
+    }
+
+    to {
+        -webkit-transform: rotate(360deg) scale(0, 0);
+        border-radius: 50px;
+    }
+}
+
+/* Scrollbar */
+
+
+::-webkit-scrollbar-track {
+
+    background-color: #000000;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #191919;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #191919;
+}
+
 
 /* Navigation Section */
 
-.container{
+.container {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
 }
-.navigation{
+.color_grey{
+    color:#858d95;
+}
+.navigation {
     height: 90px;
     width: 100%;
     box-shadow: 0px 1.5px 2px -2px rgb(255, 255, 255);
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     position: relative;
     transition: 0.2s;
+    /* backdrop-filter:blur(15px)!important; */
+    /* box-shadow: 0 10px 10px 0 rgba(218, 217, 221, 0.171)!important; */
 }
-.navigation .navbar_link{
+.navigation .logo{
+    width:50%;
+    font-size:50px;
+    font-weight: 900;
+    padding-left:10%;
+    display:flex;
+    align-items:center;
+    text-transform: uppercase;
+    background-color: #7ee8fa;
+    background: linear-gradient(315deg, #7ee8fa 0%, #80ff72 25%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+.navigation .navbar_link {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -85,145 +139,205 @@ body{
     padding-right: 4%;
     position: relative;
 }
-.navigation .navbar_link:last-child{
+
+.navigation .navbar_link:last-child {
     padding-right: 2%;
 }
-.navigation .navbar_link .hover-3{
+
+.navigation .navbar_link .hover-3 {
     padding: 10px 20px;
     text-decoration: none;
-    margin-right:30px;
+    margin-right: 30px;
     overflow: hidden;
     font-size: 20px;
     font-weight: 700;
+    display: grid;
+    place-items: center;
 }
 
-.navigation .navbar_link  a, a > span {
+.navigation .navbar_link a,
+a>span {
     position: relative;
     color: inherit;
     text-decoration: none;
     line-height: 24px;
-  }
-  .navigation .navbar_link    a:before, a:after, a > span:before, a > span:after {
+}
+
+.navigation .navbar_link a:before,
+a:after,
+a>span:before,
+a>span:after {
     content: '';
     position: absolute;
     transition: transform .5s ease;
-  }
-.navigation .navbar_link  .hover-3:before {
+}
+
+.navigation .navbar_link .hover-3:before {
     left: 0;
     bottom: 0;
     width: 100%;
-    height:5px;
+    height: 5px;
     background: #54ff6e;
     transform: translateX(-101%);
-  }
-.navigation .navbar_link  .hover-3:hover:before {
+}
+
+.navigation .navbar_link .hover-3:hover:before {
     transform: translateX(0);
 }
-.navigation .navbar_link .active > .navigation .navbar_link .hover-3:before{
-    transform: translateX(0%);
-    
+
+.navigation .navbar_link .active {
+    color:#54ff6e;
 }
 
+.navigation .navbar_link .active svg{
+    fill:#54ff6e;
+}
 /* name section */
 
-.name_section{
+.name_section {
     width: 100%;
     height: auto;
     padding: 5% 10%;
-    margin-top:10px;
+    margin-top: 10px;
     position: relative;
 }
-.name_section .hey_there{
+
+.name_section .hey_there {
     font-size: 30px;
     color: #54ff6e;
+    font-weight: 700;
+    letter-spacing: 2px;
 }
-.name_section .name{
-    font-size: 60px;
+
+.name_section .name {
+    font-size: 100px;
+    margin-bottom:20px;
+    font-weight: 900;
 }
-.name_section .description{
-    font-size: 20px;
+
+.name_section .description {
+    font-size: 30px;
+    font-weight: 600;
 }
-.name_section .filter_green{
+
+.name_section .filter_green {
     width: 150px;
     height: 150px;
     position: absolute;
     left: 7%;
-    top:7%;
-    
+    top: 7%;
+
 }
+
 .name_section .requirement {
     margin-top: 50px;
     font-size: 20px;
+   
 }
-.name_section .links{
+.name_section .requirement p{
+    color:#858d95;
+}
+.name_section .links {
     margin-top: 50px;
     display: flex;
     align-items: center;
 }
-.name_section .links a{
-    background:rgba(255, 255, 255, 0.08);
+
+.name_section .links a {
+    background: rgba(255, 255, 255, 0.08);
     padding: 10px 20px;
     text-decoration: none;
     margin-right: 10px;
     border-radius: 5px;
     display: flex;
 }
-.name_section .links a svg{
+
+.name_section .links a svg {
     margin-right: 5px;
-    fill:#54ff6e;
+    fill: #54ff6e;
     background-color: transparent;
 }
 
 
 /* About Us section */
 
-.about_me_section{
+.about_me_section {
     display: flex;
     height: 100vh;
 }
 
-.about_me{
+.about_me {
     padding-left: 10%;
     width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
 }
-.about_me .title{
+
+.about_me .title {
     font-size: 25px;
     font-weight: 900;
 }
-.about_me .p1{
-    margin-top:10px;
-    color:#8F9094;
+
+.about_me .p1 {
+    margin-top: 10px;
+    color: #8F9094;
 
 }
-.about_me .p2{
-    margin-top:20px;
-    color:#8F9094;
+
+.about_me .p2 {
+    margin-top: 20px;
+    color: #8F9094;
 }
-.about_me .p3{
-    margin-top:20px;
-    color:#8F9094;
+
+.about_me .p3 {
+    margin-top: 20px;
+    color: #8F9094;
 }
-.about_me_section .photos{
+
+.about_me_section .photos {
     display: flex;
     width: 50%;
     margin-left: 100px;
     align-items: center;
     border-radius: 50%;
 }
-.about_me_section .photos img{
+
+.about_me_section .photos img {
     border-radius: 50%;
+}
+
+
+/* Project Section */
+.project_section {
+    padding: 5% 10%;
+    line-height: 1.8;
+}
+
+.project_section .heading_project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5%;
+}
+
+.project_section .heading_project a {
+    text-decoration: none;
+    color: #54ff6e;
+}
+
+.project_section .heading_project a:hover {
+    color: orange;
 }
 
 
 /* Keep In Touch */
 
 
-.keep_in_touch{
+.keep_in_touch {
     width: 100%;
     height: 100vh;
     font-size: 25px;
@@ -232,22 +346,26 @@ body{
     justify-content: center;
     align-items: center;
 }
-.keep_in_touch .main_box_keep{
+
+.keep_in_touch .main_box_keep {
     text-align: center;
     width: 600px;
 }
-.keep_in_touch .main_box_keep .p1{
+
+.keep_in_touch .main_box_keep .p1 {
     font-size: 20px;
     margin-top: 50px;
-    color:#767a7d;
+    color: #767a7d;
 }
-.keep_in_touch .main_box_keep .links{
+
+.keep_in_touch .main_box_keep .links {
     margin-top: 50px;
     display: flex;
     justify-content: center;
 }
-.keep_in_touch .main_box_keep .links a{
-    background:rgba(255, 255, 255, 0.08);
+
+.keep_in_touch .main_box_keep .links a {
+    background: rgba(255, 255, 255, 0.08);
     padding: 10px 20px;
     text-decoration: none;
     margin-right: 10px;
@@ -255,17 +373,17 @@ body{
     display: flex;
 }
 
-.keep_in_touch .main_box_keep .links a svg{
+.keep_in_touch .main_box_keep .links a svg {
     margin-right: 5px;
-    fill:#54ff6e;
+    fill: #54ff6e;
     background-color: transparent;
 }
 
 /* google-site-verification=6UkwytuYvDLN6KOm4E7ldb5I1-Rli-WtC8ol7RRRUXE */
 
 /* Footer */
-.footer{
-   text-align: center;
+.footer {
+    text-align: center;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -277,5 +395,112 @@ body{
 .floatingNav {
     position: fixed;
     z-index: 100000;
+}
+
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.cards_item {
+    display: flex;
+    padding: 1rem;
+    width: 500px;
+}
+
+/* @media (min-width: 40rem) {
+    .cards_item {
+      width: 50%;
+    }
   }
   
+  @media (min-width: 56rem) {
+    .cards_item {
+      width: 33.3333%;
+    }
+  } */
+
+.card {
+    border-radius: 0.50rem;
+    box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    border: 1px solid rgba(255, 255, 255, 0.147);
+}
+
+.card_content {
+    padding: 1rem;
+}
+
+/* horizontal line */
+.hr_css {
+    border: 1px solid #8c8b8b3f;
+}
+
+.card_title {
+    color: #ffffff;
+    font-size: 1.1rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    margin: 0px;
+}
+
+.tags {
+    width: 100%;
+    display: flex;
+    margin: 5px 0px;
+    font-size: 13px;
+}
+
+.tags .tag {
+    padding: 0px 20px;
+    margin-right: 10px;
+    display: inline-flex;
+    vertical-align: top;
+    -webkit-box-align: center;
+    align-items: center;
+    max-width: 100%;
+    font-weight: 600;
+    line-height: 1.2;
+    outline: 0px;
+    min-height: 1.5rem;
+    min-width: 1.5rem;
+    font-size: 0.875rem;
+    border-radius: 0.375rem;
+    padding-inline-start: 0.5rem;
+    padding-inline-end: 0.5rem;
+    background: rgba(226, 232, 240, 0.16);
+    color: #E2E8F0;
+}
+
+.card_text {
+    margin-top:5px;
+    color: #bcbaba;
+    line-height: 1.5;
+    font-size: 13px;
+    margin-bottom: 1.25rem;
+    font-weight: 400;
+}
+.card_upper_part{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.left_card{
+    width: 80%;
+}
+.right_card{
+    width: 20%;
+    display: flex;
+    justify-content: flex-end;
+}
+.right_card a{
+    margin-right: 15px;
+}
