--- a/public/project.css
+++ b/public/project.css
@@ -165,38 +165,12 @@ body {
     font-weight: 700;
     display: grid;
     place-items: center;
+    border: 1px solid transparent;
+    border-radius: 5px;
 }
-
-.navigation .navbar_link a,
-a>span {
-    position: relative;
-    color: inherit;
-    text-decoration: none;
-    line-height: 24px;
+.navigation .navbar_link .hover-3:hover{
+    border:1px solid rgb(255, 255, 255);
 }
-
-.navigation .navbar_link a:before,
-a:after,
-a>span:before,
-a>span:after {
-    content: '';
-    position: absolute;
-    transition: transform .5s ease;
-}
-
-.navigation .navbar_link .hover-3:before {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5px;
-    background: #54ff6e;
-    transform: translateX(-101%);
-}
-
-.navigation .navbar_link .hover-3:hover:before {
-    transform: translateX(0);
-}
-
 .navigation .navbar_link .active {
     color:#54ff6e;
 }
@@ -214,7 +188,7 @@ section{
 
 /* Project Name */
 .name_section{
-    padding:3% 10%;
+    padding:3% 10%; 
 }
 .name_section .name{
     font-size:  calc(2rem + ((1vw - 7.68px) * 5.555555555555555));
@@ -365,7 +339,16 @@ section{
     background: rgba(226, 232, 240, 0.16);
     color: #E2E8F0;
 }
-
+.tags .tag .icon_tag{
+    background-color: transparent;
+    margin-right:5px;
+}
+.tags .tag .icon_tag svg{
+    background-color: transparent;
+}
+.tags .tag .text_icon_tag{
+    background-color: transparent;
+}
 .card_text {
     margin-top:5px;
     color: #bcbaba;
@@ -390,7 +373,14 @@ section{
 .right_card a{
     margin-right: 15px;
 }
-
+.right_card a:hover svg{
+    fill:#54ff6e;
+}
+.card_close{
+    text-align: center;
+    font-size: 30px;
+    display:none;
+}
 
 
 
