--- a/public/project.css
+++ b/public/project.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     background-color: rgb(0, 0, 0);
     color: white;
-    transition: 0.2s;
     word-wrap: break-word;
 }
 :root{
@@ -15,6 +14,7 @@
 html {
     position: relative;
     min-height: 100%;
+    overflow-x:hidden;
 }
 
 body {
@@ -22,64 +22,70 @@ body {
 }
 
 
+
 /* loader */
-
-#loading {
-    width: 50px;
-    height: 50px;
+.loader{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+.lds-ellipsis {
     display: inline-block;
-    padding: 0px;
-    opacity: 0.5;
-    border: 3px solid #09acfd;
-    -webkit-animation: loader 1s ease-in-out infinite alternate;
-    animation: loader 1s ease-in-out infinite alternate;
-}
-
-#loading:before {
-    content: " ";
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ellipsis div {
     position: absolute;
-    z-index: -1;
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
-    border: 3px solid #09acfd;
-}
-
-#loading:after {
-    content: " ";
-    position: absolute;
-    z-index: -1;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
-    border: 3px solid #09acfd;
-}
-
-@keyframes loader {
-    from {
-        transform: rotate(0deg) scale(1, 1);
-        border-radius: 0px;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
     }
-
-    to {
-        transform: rotate(360deg) scale(0, 0);
-        border-radius: 50px;
+    100% {
+      transform: scale(1);
     }
-}
-
-@-webkit-keyframes loader {
-    from {
-        -webkit-transform: rotate(0deg) scale(1, 1);
-        border-radius: 0px;
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
     }
-
-    to {
-        -webkit-transform: rotate(360deg) scale(0, 0);
-        border-radius: 50px;
+    100% {
+      transform: scale(0);
     }
-}
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
+  
 
 /* Scrollbar */
 
@@ -142,6 +148,13 @@ body {
     background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
+.navigation .logo .logo_div{
+    background: linear-gradient(315deg, #7ee8fa 0%, #80ff72 25%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    cursor:pointer;
+    -webkit-text-fill-color: transparent;
+}
 .navigation .navbar_link {
     display: flex;
     justify-content: flex-end;
@@ -189,6 +202,7 @@ section{
 /* Project Name */
 .name_section{
     padding:3% 10%; 
+    margin-top: 1px;
 }
 .name_section .name{
     font-size:  calc(2rem + ((1vw - 7.68px) * 5.555555555555555));
