--- a/public/resume.css
+++ b/public/resume.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     background-color: rgb(0, 0, 0);
     color: white;
-    transition: 0.2s;
     word-wrap: break-word;
 }
 :root{
@@ -15,71 +14,76 @@
 html {
     position: relative;
     min-height: 100%;
+    overflow-x:hidden;
 }
 
 body {
     font-family: 'Noto Sans', sans-serif;
+   
 }
-
 
 /* loader */
-
-#loading {
-    width: 50px;
-    height: 50px;
+.loader{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+.lds-ellipsis {
     display: inline-block;
-    padding: 0px;
-    opacity: 0.5;
-    border: 3px solid #09acfd;
-    -webkit-animation: loader 1s ease-in-out infinite alternate;
-    animation: loader 1s ease-in-out infinite alternate;
-}
-
-#loading:before {
-    content: " ";
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ellipsis div {
     position: absolute;
-    z-index: -1;
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
-    border: 3px solid #09acfd;
-}
-
-#loading:after {
-    content: " ";
-    position: absolute;
-    z-index: -1;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
-    border: 3px solid #09acfd;
-}
-
-@keyframes loader {
-    from {
-        transform: rotate(0deg) scale(1, 1);
-        border-radius: 0px;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
     }
-
-    to {
-        transform: rotate(360deg) scale(0, 0);
-        border-radius: 50px;
+    100% {
+      transform: scale(1);
     }
-}
-
-@-webkit-keyframes loader {
-    from {
-        -webkit-transform: rotate(0deg) scale(1, 1);
-        border-radius: 0px;
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
     }
-
-    to {
-        -webkit-transform: rotate(360deg) scale(0, 0);
-        border-radius: 50px;
+    100% {
+      transform: scale(0);
     }
-}
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
 
 /* Scrollbar */
 
@@ -141,6 +145,13 @@ body {
 	-webkit-background-clip: text;
     background-clip: text;
 	-webkit-text-fill-color: transparent;
+}
+.navigation .logo .logo_div{
+    background: linear-gradient(315deg, #7ee8fa 0%, #80ff72 25%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    cursor:pointer;
+    -webkit-text-fill-color: transparent;
 }
 .navigation .navbar_link {
     display: flex;
@@ -209,6 +220,7 @@ body {
     margin-right: 10px;
     border-radius: 5px;
     display: flex;
+    border: 1px solid transparent;
 }
 
 .resume .links a svg {
@@ -217,7 +229,9 @@ body {
     width: 20px;
     background-color: transparent;
 }
-
+.resume .links a:hover{
+    border: 1px solid white;
+}
 
 /* Footer */
 .footer {
