--- a/public/index.css
+++ b/public/index.css
@@ -22,7 +22,8 @@ body {
     font-family: 'Noto Sans', sans-serif;
     position: relative;
     width:100%;
-    
+    min-width:200px;
+    min-height:100%;
 }
 
 
